# tree-sitter-org

./: .gitignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  gen_unicode_typechecks.py  grammar.js  package.json
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
bindings/swift/TreeSitterOrg/: org.h
corpus/: basic.tst
queries/: highlights.scm  markup.scm
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc  unicode_type.h
