[package]
name = "tree-sitter-org"
description = "org grammar for the tree-sitter parsing library"
version = "1.0.0"
keywords = ["incremental", "parsing", "org"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/milisims/tree-sitter-org"
edition = "2022"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.19"

[build-dependencies]
cc = "1.0"
